--- a/package.json
+++ b/package.json
@@ -5,5 +5,15 @@
   "main": "src/index.js",
   "author": "Corey Ferguson",
   "license": "ISC",
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "styled-components": "^4.4.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
+  },
+  "scripts": {
+    "build": "webpack --mode production"
+  }
 }
