--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "prop-types": "^15.7.2",
-    "react-dom": "^16.12.0",
     "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "styled-components": "^4.4.1",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack": "^4.41.2"
+    "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack-dev-server --config webpack.dev.js --open",
-    "test": "jest src --watch"
+    "test": "jest --watch",
+    "test:coverage": "jest --collect-coverage"
   },
   "bit": {
     "componentsDefaultDirectory": "components/{name}",
