--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "overrides": {
       "*": {
         "dependencies": {
+          "enzyme": "-",
           "prop-types": "-",
-          "react": "-",
           "react-dom": "-",
+          "react-test-renderer": "-",
+          "react": "-",
           "styled-components": "-"
         },
         "peerDependencies": {
