--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "test:coverage": "jest --collect-coverage"
   },
   "bit": {
-    "componentsDefaultDirectory": "components/{name}",
     "env": {
       "compiler": "bit.envs/compilers/react@1.0.5"
     },
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "yarn",
     "overrides": {
       "*": {
         "dependencies": {
@@ -56,7 +57,6 @@
           "compiler": "-"
         }
       }
-    },
-    "packageManager": "yarn"
+    }
   }
 }
